git commit -m "fix: improve breadcrumbs wrapping on small screens"

--- a/src/shared/ui/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/shared/ui/Breadcrumbs/Breadcrumbs.module.scss
@@ -4,9 +4,14 @@
   display: flex;
   align-items: center;
   @include scroll-snap;
+  flex-wrap: wrap;
 
   & > *:not(:last-child) {
     margin: toRem(10);
+  }
+
+  & > *:first-child {
+    margin-left: 0;
   }
 
   .active {
